--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
 		"country-list-js": "^3.1.7",
+		"csurf": "^1.11.0",
 		"date-format": "^2.1.0",
 		"dotenv": "^8.1.0",
 		"ejs": "^2.7.1",
@@ -32,6 +33,7 @@
 		"express-sanitizer": "^1.0.5",
 		"express-session": "^1.16.2",
 		"express-validator": "^6.2.0",
+		"helmet": "^3.23.3",
 		"image-type": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"money-exchange": "^1.0.0",
